SERVER-21706 error when mapReduce outputs to config or admin db

(cherry picked from commit 3e1a3872c996fcc72c8cf20ea38e9fe86a11caa4)