jstests/sharding/map_reduce_validation.js
@@ -10,4 +10,20 @@ assert.commandFailed(testDB.runCommand({ mapReduce: 'user',
                                          reduce: reduceFunc,
                                          out: { inline: 1, sharded: true }}));
 
+testDB.bar.insert({i: 1});
+assert.commandFailed(testDB.runCommand({ mapReduce: 'bar',
+                                         map: function() {emit(this.i, this.i*3);},
+                                         reduce:  function(key, values) {return Array.sum(values)},
+                                         out: { replace: "foo", db: "admin" }}));
+
+assert.commandFailed(testDB.runCommand({ mapReduce: 'bar',
+                                         map: function() {emit(this.i, this.i*3);},
+                                         reduce:  function(key, values) {return Array.sum(values)},
+                                         out: { replace: "foo", db: "config" }}));
+
+assert.commandWorked(testDB.runCommand({ mapReduce: 'bar',
+                                         map: function() {emit(this.i, this.i*3);},
+                                         reduce:  function(key, values) {return Array.sum(values)},
+                                         out: { replace: "foo", db: "test" }}));
+
 st.stop();
